# dunder-mifflin-harness

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  LICENSE  README.md  justfile  main.py  pyproject.toml
.agents/skills/adk-architect/: SKILL.md
.agents/skills/adk-architect/references/: adk2_graphs.md  agents.md  ref_adk2.md  ref_agents.md  ref_cross_cutting.md  ref_runtime.md  ref_tools.md  tools_sessions.md
brainstrom/: 00-IDEA.md  agentic-derivatives.md  agentic-frameworks.md
db/migrations/: README.md
knowledge/: 00-IDEA.md  01-PLAN.md  02-MODELS.md  README.md
lab/: README.md
lab/notebooks/: README.md  pydantic-ai.ipynb
lab/scripts/: pydantic_ai_script.py
specimens/: AGENTS.md
specimens/pygemini/: AGENTS.md  PyGeminiCLI.md  pyproject.toml
specimens/pygemini/src/pygemini/: __init__.py  main.py
specimens/pygemini/src/pygemini/cli/: __init__.py  app.py  commands.py  input.py  renderer.py  themes.py
specimens/pygemini/src/pygemini/context/: __init__.py  file_discovery.py  gemini_md.py  memory_store.py
specimens/pygemini/src/pygemini/core/: __init__.py  agent_loop.py  config.py  content_generator.py  events.py  history.py  prompts.py
specimens/pygemini/src/pygemini/hooks/: __init__.py  manager.py
specimens/pygemini/src/pygemini/mcp/: __init__.py  client.py
specimens/pygemini/src/pygemini/safety/: __init__.py  approval.py  policy.py  sandbox.py
specimens/pygemini/src/pygemini/session/: __init__.py  checkpoint.py  compressor.py  manager.py
specimens/pygemini/src/pygemini/tools/: __init__.py  ask_user.py  base.py  memory.py  registry.py  shell.py  web_fetch.py  web_search.py
specimens/pygemini/src/pygemini/tools/filesystem/: __init__.py  edit_file.py  list_directory.py  read_file.py  read_many_files.py  write_file.py
specimens/pygemini/tests/: __init__.py  conftest.py  test_base_tool.py  test_config.py  test_events.py  test_integration_final.py  test_integration_phase1.py  test_integration_phase2.py  test_registry.py
specimens/pygemini/tests/test_cli/: test_input.py
specimens/pygemini/tests/test_context/: __init__.py  test_file_discovery.py  test_gemini_md.py  test_memory_store.py
specimens/pygemini/tests/test_core/: test_config.py  test_history_extended.py
specimens/pygemini/tests/test_hooks/: test_manager.py
specimens/pygemini/tests/test_mcp/: test_client.py
specimens/pygemini/tests/test_safety/: __init__.py  test_approval.py  test_policy.py  test_sandbox.py
specimens/pygemini/tests/test_session/: test_checkpoint.py  test_compressor.py  test_manager.py
specimens/pygemini/tests/test_tools/: test_ask_user.py  test_edit_file.py  test_list_directory.py  test_memory.py  test_read_file.py  test_read_many_files.py  test_shell.py  test_web_fetch.py  test_web_search.py  test_write_file.py
workspace/: README.md
