[project]
name = "dunder-mifflin-harness"
version = "0.1.0"
description = "A harness for AI agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "google-adk==2.0.0a1",
    "langfuse>=4.0.1",
    "litellm>=1.82.6",
    "openinference-instrumentation-google-adk>=0.1.10",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "ipykernel>=7.2.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
]
experimental = [
    "deepagents>=0.4.12",
    "duckduckgo-search>=8.1.1",
    "langchain-litellm>=0.6.2",
    "langgraph>=1.1.3",
    "pydantic-ai-slim[openrouter]>=1.72.0",
]
