[project]
name = "dunder-mifflin-harness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "deepagents>=0.4.12",
    "fastmcp>=3.1.1",
    "google-adk>=1.14.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.1.3",
    "litellm>=1.82.6",
    "liteparse>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-ai-slim[a2a,duckduckgo,evals,fastmcp,logfire]>=1.73.0",
    "pydantic-settings>=2.13.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pytest>=9.0.2",
]
pygemini = [
    "click>=8.3.1",
    "gitpython>=3.1.46",
    "google-genai>=1.69.0",
    "html2text>=2025.4.15",
    "httpx>=0.28.1",
    "mcp>=1.26.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "rich>=14.3.3",
    "tiktoken>=0.12.0",
    "watchfiles>=1.1.1",
]

[tool.uv.workspace]
members = ["specimens/pygemini"]
